--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
-  <header>
+  <header role="banner">
     <h1>Pangolin</h1>
-      <nav>
+      <nav role="navigation">
         <ul>
           <li><a href="#description">Description</a></li>
           <li><a href="#behaviour">Behaviour</a></li>
@@ -18,7 +18,7 @@
       </nav>
   </header>
 
-  <main>
+  <main role="main">
     <section id="description" tabindex="0">
       <h2>Description</h2>
     </section>
@@ -32,7 +32,7 @@
     </section>
   </main>
 
-  <footer>
+  <footer role="contentinfo">
     <small>© 1821 Pangolin</small>
   </footer>
 
